<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Run_tracker</string>
    <string name="action_settings">Settings</string>
    <string name="StartText">Start</string>
    <string name="LoginText">Login</string>
    <string name="SigninText">Register</string>
    <string name="GreetText">Welcome to RunTracker please login or register </string>
    <string name="StopText">Stop</string>
    <string name="PauseText">Pause</string>
    <string name="Distance">0 m  </string>
    <string name="Paused">Paused</string>
    <string name="Stoped">Stoped</string>
    <string name="Running">Running</string>
    <string name="stub">stub</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="UserName"> Username</string>
    <string name="RegisterText">Register: </string>
    <string name="Age">Your age </string>
    <string name="Password">Your password </string>
    <string name="Name">Name</string>
    <string name="Mail">Your mail </string>
    <string name="Register">Register </string>
    <string name="ok">OK </string>
    <string name="cancel">Cancel </string>
    <string name="password">Password: </string>
    <string name="password2">Password again: </string>
    <string name="Login">Login:</string>
    <string name="username">Username:</string>
    <string name="remember">Remember me</string>
    <string name="Surname">Surname:</string>
    <string name="RegisterPrompt">If you dont have an account Register here</string>
    <string name="LoginPrompt">If you aldredy have an account Login here </string>
    <string name="DeleteButtonText">Delete track </string>
    <string name="Refresh">Refresh</string>
    <string name="Submit">Submit</string>
    <string name="Newpass">New password</string>
    <string name="Newpass_again">New password again</string>
    <string name="Oldpass">Old password</string>

</resources>